build/apps/hass/overlays/dev/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "4"
  labels:
    app.kubernetes.io/name: home-assistant
  name: home-assistant

spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  # strategy:
  #   type: RollingUpdate
  strategy:
    type: Recreate

  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
        task: home-assistant
    spec:
      hostNetwork: false
      restartPolicy: Always

      containers:
        - image: 'ghcr.io/home-assistant/home-assistant:2024.2.0.dev20240129'
          imagePullPolicy: IfNotPresent
          name: home-assistant
          ports:
          - containerPort: 8123
            name: home-assistant
            protocol: TCP
          securityContext:
            privileged: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File

          volumeMounts:
          - mountPath: /config
            name: hass-pv-storage
            readOnly: false
          - mountPath: /etc/localtime
            name: localtime

      volumes:
      - name: hass-pv-storage
        persistentVolumeClaim:
          claimName: kuma-pv-volume #hass-pv-claim
      - name: localtime
        hostPath:
          path: /etc/localtime

        # livenessProbe:
        #   tcpSocket:
        #     port: 8123
        #   initialDelaySeconds: 0
        #   failureThreshold: 3
        #   timeoutSeconds: 1
        #   periodSeconds: 10
        # readinessProbe:
        #   tcpSocket:
        #     port: 8123
        #   initialDelaySeconds: 0
        #   failureThreshold: 3
        #   timeoutSeconds: 1
        #   periodSeconds: 10
        # startupProbe:
        #   tcpSocket:
        #     port: 8123
        #   initialDelaySeconds: 0
        #   failureThreshold: 30
        #   timeoutSeconds: 1
        #   periodSeconds: 5
